# cpp-playground

./: .dockerignore  .travis.yml  README.md  requirements.system.txt
00-lang-tag-dispatch/: CMakeLists.txt
00-lang-tag-dispatch/include/: elements.hpp  helper.hpp
00-lang-tag-dispatch/src/: demo-01.cpp
01-lang-copy-elision/: CMakeLists.txt
01-lang-copy-elision/src/: demo-01.cpp  demo-02.cpp
02-lang-move-semantics/: CMakeLists.txt  README.md
02-lang-move-semantics/include/: helper.hpp
02-lang-move-semantics/src/: demo-01.cpp
03-concurrency-thread/: CMakeLists.txt  README.md
03-concurrency-thread/include/: choice.hpp  helper.hpp  thread_executor.hpp
03-concurrency-thread/src/: demo-01.cpp  demo-02.cpp  demo-03.cpp  demo-04.cpp  demo-05.cpp
04-concurrency-async/: CMakeLists.txt  README.md
04-concurrency-async/src/: demo-01.cpp  demo-02.cpp  demo-03.cpp  demo-04.cpp
05-pattern-type-erasure/: CMakeLists.txt  README.md
05-pattern-type-erasure/include/: object.hpp
05-pattern-type-erasure/src/: demo-01.cpp
06-pattern-non-virtual-interface/: CMakeLists.txt  README.md
06-pattern-non-virtual-interface/src/: demo-01.cpp
07-pattern-return-type-resolver/: CMakeLists.txt  README.md
07-pattern-return-type-resolver/src/: demo-01.cpp
08-pattern-thread-pool/: CMakeLists.txt  README.md
08-pattern-thread-pool/src/: demo-01.cpp
09-lang-metafunction/: CMakeLists.txt
09-lang-metafunction/src/: demo-01.cpp  demo-02.cpp  demo-03.cpp  demo-04.cpp  demo-05.cpp  demo-06.cpp  demo-07.cpp
10-pattern-expression-templates/: CMakeLists.txt
10-pattern-expression-templates/src/: demo-01.cpp
11-pattern-crtp/: CMakeLists.txt
11-pattern-crtp/src/: demo-01.cpp
12-pattern-mixin/: CMakeLists.txt
12-pattern-mixin/src/: demo-01.cpp
13-pattern-pipeable/: CMakeLists.txt  README.md
13-pattern-pipeable/src/: demo-01.cpp
docker/: Dockerfile  build.sh  run.sh
scripts/: build_all.sh  run_all.sh
tests/: test_pipeable.bats
